--- a/index.html
+++ b/index.html
@@ -15,6 +15,71 @@
             overflow-x: hidden;
             color: #e0e1dd;
         }
+        /* עיצוב ה-POP UP */
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: linear-gradient(135deg, #1d3557, #457b9d);
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
+    color: #ffffff;
+    max-width: 400px;
+    text-align: center;
+    z-index: 2000;
+    animation: popIn 0.4s ease-out;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.popup h3 {
+    margin: 0 0 15px;
+    font-size: 22px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.popup p {
+    margin: 0 0 20px;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.popup button {
+    background: #a8dadc;
+    color: #1d3557;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.2s;
+}
+
+.popup button:hover {
+    background: #ffffff;
+    transform: scale(1.05);
+}
+
+@keyframes popIn {
+    0% { transform: translate(-50%, -50%) scale(0.8); opacity: 0; }
+    100% { transform: translate(-50%, -50%) scale(1); opacity: 1; }
+}
+
+.popup-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 1500;
+}
         .container {
             background: rgba(255, 255, 255, 0.98);
             padding: 30px;
