--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             font-weight: 600;
             cursor: pointer;
             transition: background 0.3s, transform 0.2s;
-            margin: 0 10px; /* מרווח בין הכפתורים */
+            margin: 0 20px; /* שינוי למרווח גדול יותר בין הכפתורים */
         }
         .popup button:hover {
             background: #ffffff;
